ci/k8s/tutoriel-dev-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tutoriel-deployment-#{ENV}#
spec:
  replicas: 1
  minReadySeconds: 120
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: tutoriel-#{ENV}#
      env: #{ENV}#
  template:
    metadata:
      labels:
        app: tutoriel
        env: #{ENV}#
    spec:
      containers:
        - name: tutoriel-#{ENV}#
          image: lkpeto/tutoriel.dev:#{ENV}#
          imagePullPolicy: Always
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 9000
