ci/k8s/tutoriel-dev-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tutoriel-dev-service
spec:
  selector:
    app: tutoriel-dev
    env: prod
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
