ci/k8s/tutoriel-dev-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tutoriel-ingress-#{ENV}#
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - #{HOST}#
      secretName: tutoriel-ingress-tls-#{ENV}#
  rules:
    - host: #{HOST}#
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tutoriel-service-#{ENV}#
                port:
                  number: 80
